compiler-core/src/package_interface/snapshots/rakun_core__package_interface__tests__imported_type.snap
---
source: compiler-core/src/package_interface/tests.rs
expression: "\nimport other_module.{type Element}\npub fn main() -> Element(Int) {}\n"
---
{
  "name": "my_package",
  "version": "11.10.9-1.wibble+build",
  "rakun-version-constraint": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [],
      "type-aliases": {},
      "types": {},
      "constants": {},
      "functions": {
        "main": {
          "documentation": null,
          "deprecation": null,
          "implementations": {
            "rakun": true,
            "uses-erlang-externals": false,
            "uses-javascript-externals": false,
            "can-run-on-erlang": true,
            "can-run-on-javascript": true
          },
          "parameters": [],
          "return": {
            "kind": "named",
            "name": "Element",
            "package": "other_package",
            "module": "other_module",
            "parameters": [
              {
                "kind": "named",
                "name": "Int",
                "package": "",
                "module": "rakun",
                "parameters": []
              }
            ]
          }
        }
      }
    }
  }
}
