compiler-core/src/package_interface/snapshots/rakun_core__package_interface__tests__type_constructors.snap
---
source: compiler-core/src/package_interface/tests.rs
expression: "\npub record Box<a, b> {\n  Box(b, Int)\n  OtherBox(message: String, a: a)\n}\n"
---
{
  "name": "my_package",
  "version": "11.10.9-1.wibble+build",
  "rakun-version-constraint": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [],
      "type-aliases": {},
      "types": {
        "Box": {
          "documentation": null,
          "deprecation": null,
          "parameters": 2,
          "constructors": [
            {
              "documentation": null,
              "name": "Box",
              "parameters": [
                {
                  "label": null,
                  "type": {
                    "kind": "variable",
                    "id": 1
                  }
                },
                {
                  "label": null,
                  "type": {
                    "kind": "named",
                    "name": "Int",
                    "package": "",
                    "module": "rakun",
                    "parameters": []
                  }
                }
              ]
            },
            {
              "documentation": null,
              "name": "OtherBox",
              "parameters": [
                {
                  "label": "message",
                  "type": {
                    "kind": "named",
                    "name": "String",
                    "package": "",
                    "module": "rakun",
                    "parameters": []
                  }
                },
                {
                  "label": "a",
                  "type": {
                    "kind": "variable",
                    "id": 0
                  }
                }
              ]
            }
          ]
        }
      },
      "constants": {},
      "functions": {}
    }
  }
}
